# kubehawk

./: pyproject.toml
Formula/: kubeagle.rb
docs/models/: model-reference.md
kubeagle/: __main__.py  app.py
kubeagle/constants/: __init__.py  defaults.py  enums.py  instance_types.py  limits.py  optimizer.py  patterns.py  timeouts.py  ui.py  values.py
kubeagle/constants/screens/: __init__.py  charts_explorer.py  cluster.py  common.py  settings.py
kubeagle/controllers/: __init__.py
kubeagle/controllers/base/: base_controller.py
kubeagle/controllers/charts/: controller.py
kubeagle/controllers/charts/fetchers/: chart_fetcher.py  release_fetcher.py
kubeagle/controllers/charts/parsers/: chart_parser.py
kubeagle/controllers/cluster/: __init__.py  controller.py
kubeagle/controllers/cluster/fetchers/: event_fetcher.py
kubeagle/controllers/cluster/parsers/: node_parser.py
kubeagle/controllers/team/mappers/: team_mapper.py
kubeagle/controllers/team/parsers/: team_parser.py
kubeagle/css/: app.tcss
kubeagle/css/screens/: optimizer_screen.tcss  settings_screen.tcss
kubeagle/keyboard/: __init__.py  app.py  navigation.py
kubeagle/models/cache/: data_cache.py
kubeagle/models/core/: workload_inventory_info.py
kubeagle/models/optimization/: __init__.py  resource_impact.py
kubeagle/models/state/: app_settings.py
kubeagle/optimizer/: fix_verifier.py  fixer.py  full_ai_fixer.py  helm_renderer.py  llm_cli_runner.py  llm_patch_protocol.py  resource_impact_calculator.py  rules.py
kubeagle/screens/: __init__.py  base_screen.py
kubeagle/screens/charts_explorer/: charts_explorer_screen.py  config.py  presenter.py
kubeagle/screens/cluster/: __init__.py  cluster_screen.py  config.py  presenter.py
kubeagle/screens/detail/: __init__.py  config.py  optimizer_screen.py  presenter.py
kubeagle/screens/detail/components/: ai_full_fix_modal.py  fix_details_modal.py  impact_analysis_dialog.py  recommendations_view.py  resource_impact_view.py  violations_view.py
kubeagle/screens/mixins/: __init__.py  main_navigation_tabs_mixin.py  screen_data_loader.py  tabbed_view_mixin.py  worker_mixin.py
kubeagle/screens/reports/: __init__.py  config.py  report_export_screen.py
kubeagle/screens/settings/: __init__.py  presenter.py  settings_screen.py
kubeagle/screens/workloads/: presenter.py  workloads_screen.py
kubeagle/tests/tui/smoke/: test_custom_data_table_runtime.py
kubeagle/tests/tui/smoke/keybindings/: test_navigation_bindings.py
kubeagle/tests/tui/unit/: test_app.py  test_base_screen.py  test_cache_manager.py  test_charts_explorer_refresh.py  test_cluster_screen_fix_regression.py  test_custom_data_table.py  test_modularization.py  test_optimizer_unit.py  test_worker_mixin.py  test_workloads_streaming.py
kubeagle/tests/tui/unit/config/: test_charts_explorer_config.py  test_cluster_config.py  test_detail_config.py  test_reports_config.py  (+1 more)
kubeagle/utils/: __init__.py  cache_manager.py  report_generator.py  resource_parser.py
kubeagle/widgets/: __init__.py  _base.py
kubeagle/widgets/containers/: __init__.py
kubeagle/widgets/data/: __init__.py
kubeagle/widgets/data/indicators/: __init__.py
kubeagle/widgets/data/kpi/: custom_kpi.py
kubeagle/widgets/data/tables/: __init__.py  custom_data_table.py  custom_table.py
kubeagle/widgets/display/: __init__.py  custom_digits.py
kubeagle/widgets/feedback/: __init__.py  custom_dialog.py
kubeagle/widgets/filter/: __init__.py
kubeagle/widgets/input/: __init__.py
kubeagle/widgets/selection/: __init__.py
kubeagle/widgets/special/: __init__.py
kubeagle/widgets/structure/: __init__.py
kubeagle/widgets/tabs/: __init__.py
(+39 files in other folders)
